syntax = "proto3";

package company;

message CreateCompanyRequest {
    string name = 1;
    string country = 2;
    string state = 3;
    string city = 4;
    string street = 5;
    string zip = 6;
    string number = 7;
}

message CreateCompanyResponse {
    string uuid = 1;
}

service CompanyService {
    rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse) {};
}